# Kaleidoscope

./: .gitignore  .gitmodules  CMakeLists.txt  EMSetup.bat  LICENSE  README.md  setup.bat
cmake/: FindSDL2.cmake
include/: Glew.h
include/Device/: Boolean.hpp  Buffer.hpp  DataType.hpp  Device.hpp  DrawMode.hpp  Program.hpp  VertexArray.hpp
include/Utility/: Bitfield.hpp
include/Window/: Factory.hpp  Window.hpp
inline/Utility/: Bitfield.inl
src/: main.cpp
src/Device/: Buffer.cpp  Device.cpp  Program.cpp  VertexArray.cpp
src/Window/: Factory.cpp  Window.cpp
